--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       type="text/javascript"
       src="//app.storyblok.com/f/storyblok-latest.js"
     ></script>
+    <script data-ad-client="ca-pub-1612608979329702" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   <body>
