--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,38 @@
       src="//app.storyblok.com/f/storyblok-latest.js"
     ></script>
     <script data-ad-client="ca-pub-1612608979329702" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      !(function (a) {
+        if (!a.Localize) {
+          a.Localize = {};
+          for (
+            var e = [
+              "translate",
+              "untranslate",
+              "phrase",
+              "initialize",
+              "translatePage",
+              "setLanguage",
+              "getLanguage",
+              "detectLanguage",
+              "getAvailableLanguages",
+              "untranslatePage",
+              "bootstrap",
+              "prefetch",
+              "on",
+              "off",
+              "hideWidget",
+              "showWidget",
+              "getSourceLanguage",
+            ],
+            t = 0;
+            t < e.length;
+            t++
+          )
+            a.Localize[e[t]] = function () { };
+        }
+      })(window);
+    </script>
   </head>
 
   <body>
