--- a/public/index.html
+++ b/public/index.html
@@ -27,38 +27,16 @@
       src="//app.storyblok.com/f/storyblok-latest.js"
     ></script>
     <script data-ad-client="ca-pub-1612608979329702" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-      !(function (a) {
-        if (!a.Localize) {
-          a.Localize = {};
-          for (
-            var e = [
-              "translate",
-              "untranslate",
-              "phrase",
-              "initialize",
-              "translatePage",
-              "setLanguage",
-              "getLanguage",
-              "detectLanguage",
-              "getAvailableLanguages",
-              "untranslatePage",
-              "bootstrap",
-              "prefetch",
-              "on",
-              "off",
-              "hideWidget",
-              "showWidget",
-              "getSourceLanguage",
-            ],
-            t = 0;
-            t < e.length;
-            t++
-          )
-            a.Localize[e[t]] = function () { };
-        }
-      })(window);
-    </script>
+<script src="https://global.localizecdn.com/localize.js"></script>
+<script>!function(a){if(!a.Localize){a.Localize={};for(var e=["translate","untranslate","phrase","initialize","translatePage","setLanguage","getLanguage","detectLanguage","getAvailableLanguages","untranslatePage","bootstrap","prefetch","on","off","hideWidget","showWidget","getSourceLanguage"],t=0;t<e.length;t++)a.Localize[e[t]]=function(){}}}(window);</script>
+
+<script>
+  Localize.initialize({
+    key: 'QAb7Iuyqk2OT3', 
+    rememberLanguage: true,
+    // other options go here, separated by commas
+  });
+</script>
   </head>
 
   <body>
